--- a/src/index.html
+++ b/src/index.html
@@ -5,24 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carousel</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
-            <div id="viewport" class="above-fold">
-
-            </div>
-            <div class="button">
-                <div class="col-6">
-                    <button id="prev" class="btn btn-primary">Previous</button>
-                </div>
-                <div class="col-6">
-                    <button id="next" class="btn btn-primary">Next</button>
-                </div>
+            <div id="viewport" class="above-fold col-12">
             </div>
         </div>
+        <div class="row">
+            <div class="col-12 d-flex justify-content-between">
+                <button id="prev" class="btn btn-primary">Previous</button>
+                <button id="next" class="btn btn-primary">Next</button>
+            </div>
+        </div>
+        <div class="button">
+        </div>
+    </div>
     </div>
     <script src="./index.js"></script>
 </body>
