fixed webpack issue of not loading pages

--- a/src/template.html
+++ b/src/template.html
@@ -13,7 +13,7 @@
             <div id="viewport" class="above-fold">
 
             </div>
-            <div class="button">
+            <div class="button row">
                 <div class="col-6">
                     <button id="prev" class="btn btn-primary">Previous</button>
                 </div>
@@ -23,7 +23,6 @@
             </div>
         </div>
     </div>
-    <script src="../dist/main.js"></script>
 </body>
 
 </html>
